--- a/logistics_face/src/main/resources/datasource.properties
+++ b/logistics_face/src/main/resources/datasource.properties
@@ -1,9 +1,16 @@
 dbcp.driverClassName=com.mysql.jdbc.Driver
-dbcp.url=jdbc:mysql://localhost:3306/logistics
+
+dbcp.url=jdbc:mysql://183.167.219.162:3306/logistics
+dbcp.username=logistics
+dbcp.password=11111111
+
 #dbcp.url=jdbc:mysql://61.188.177.211:3306/logistics
-dbcp.username=root
-dbcp.password=111111
+#dbcp.username=root\
 #dbcp.password=icityMysqlP@ssw0rd
+
+#dbcp.url=jdbc:mysql://localhost:3306/logistics
+#dbcp.username=root
+#dbcp.password=111111
 
 dbcp.initialSize=5
 dbcp.maxActive=20
