--- a/logistics_face/src/main/resources/datasource.properties
+++ b/logistics_face/src/main/resources/datasource.properties
@@ -1,6 +1,6 @@
 dbcp.driverClassName=com.mysql.jdbc.Driver
 
-dbcp.url=jdbc:mysql://219.136.252.35:3312/logistics
+dbcp.url=jdbc:mysql://localhost:3312/logistics
 dbcp.username=logistics
 dbcp.password=logistics
 
